--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -59,6 +59,32 @@
 
 <script>
 
+  //event listener for click of data-key, play audio
+  const playAudio = (e) => {
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    if (audio) {
+      audio.currentTime = 0;
+      audio.play();
+    }
+  }
+
+  //on click add property 'playing' as class
+  const addPlayingClass = (e) => {
+    const key = document.querySelector(`div[data-key="${e.keyCode}"]`);
+    if (key)  key.classList.add('playing');
+  }
+
+  //on end of event, remove 'playing' as class
+  const removePlayingClass = (e) => {
+    e.target.classList.remove('playing');
+  }
+
+  window.addEventListener('keydown', playAudio);
+  window.addEventListener('keydown', addPlayingClass);
+
+  document.querySelectorAll('.key').forEach((audio) => {
+    audio.addEventListener('transitionend', removePlayingClass);
+  })
 </script>
 
 
