--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,13 +62,35 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.04, 0.53, 0, 1.33);
     }
 
   </style>
 
   <script>
+    const secondHand = document.querySelector('.second-hand');
+    const minHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
 
+    //handle seconds hand
+    function moveSeconds () {
+      const now = new Date();
+      const seconds = now.getSeconds();
+      const secondsDegrees = ((seconds / 60) * 360) + 90;
+      secondHand.style.transform =`rotate(${secondsDegrees}deg)`
 
+      const minute = now.getMinutes();
+      const minuteDegrees = ((minute / 60) * 360) + 90;
+      minHand.style.transform = `rotate(${minuteDegrees}deg)`;
+
+      const hour = now.getHours();
+      const hourDegrees = ((hour / 60) * 360) + 90;
+      hourHand.style.transform = `rotate(${hourDegrees}deg)`;
+    }
+    setInterval(moveSeconds, 1000);
   </script>
 </body>
 </html>
