--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -31,17 +31,29 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const result = inventors.filter(inventor => inventor.year >= 1500 && inventor.year < 1600);
+    console.log('#1', result)
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
+    const resultTwo = inventors.map(inventor => inventor.first + ' ' + inventor.last);
+    console.log('#2', resultTwo)
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const resultThree = inventors.sort((a,b) => a.year - b.year);
+    console.log('#3', resultThree)
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
+    const resultFour = inventors.reduce((sum, inventor) => {
+      return sum + (inventor.passed - inventor.year)
+    }, 0)
+    console.log('#4', resultFour)
 
     // 5. Sort the inventors by years lived
+    const resultFive = inventors.sort((a,b) => (a.passed-a.year) - (b.passed-b.year));
+    console.log('#5', resultFive)
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
