--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,14 +26,29 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
-    // Array.prototype.every() // is everyone 19 or older?
+    const older = people.some(person => {
+      let now = new Date();
+      if (now.getFullYear() - person.year >= 19) {
+        return true;
+      } else {
+        return false;
+      }
+    })
 
+    console.log({older})
+    // Array.prototype.every() // is everyone 19 or older?
+    const old = people.every(person => (((new Date()).getFullYear()) - person.year)>= 19 ? true: false)
+    console.log({old})
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
-
+    const commentID = comments.find(comment => comment.id === 823423);
+    console.log(commentID)
     // Array.prototype.findIndex()
     // Find the comment with this ID
+    const targetIndex = comments.findIndex(comment => comment.id === 823423);
+    comments.splice(targetIndex,1);
+    console.log(targetIndex, comments);
     // delete the comment with the ID of 823423
 
   </script>
