--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -65,7 +65,7 @@
 
     const handleInput = function () {
       const suffix = this.dataset.sizing || '';
-      document.querySelector('img').style.setProperty(`--${this.name}`, this.value + suffix)
+      document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix)
     }
 
     inputs.forEach((input) => {
