complete persisting of check and item to local storage and complete add of item to ul upon submit

--- a/15 - LocalStorage/index-START.html
+++ b/15 - LocalStorage/index-START.html
@@ -28,7 +28,42 @@
 <script>
   const addItems = document.querySelector('.add-items');
   const itemsList = document.querySelector('.plates');
-  const items = [];
+  const items = JSON.parse(localStorage.getItem('items')) || [];
+
+  const loadItems = function ( localItemsList, target) {
+    let htmlString = localItemsList.map( (thing, i) => {
+      return `
+      <li>
+        <input type="checkbox" data-i="${i}" name="taco" ${thing.done ? 'checked': ''}>
+        <label for="item" data-i="${i}">${thing.item}</label>
+      </li>
+      `
+    }).join('');
+    target.innerHTML = htmlString;
+  }
+
+  const handleSubmit = function (e) {
+    e.preventDefault();
+    let item = this.querySelector('[name=item]').value;
+    items.push({item, 'done': false})
+    loadItems(items, itemsList)
+    localStorage.setItem('items', JSON.stringify(items));
+    this.reset();
+  }
+
+  const handleTaco = function (e) {
+    if (e.target.matches('input') || e.target.matches('label')) { 
+    let i = e.target.dataset.i;
+    console.log(e.target, i)
+    items[i].done = !items[i].done;
+    localStorage.setItem('items', JSON.stringify(items))
+    loadItems(items, itemsList);
+    }
+  }
+
+  addItems.addEventListener('submit', handleSubmit);
+  itemsList.addEventListener('click', handleTaco);
+  loadItems(items, itemsList);
 
 </script>
 
