--- a/17 - Sort Without Articles/index-START.html
+++ b/17 - Sort Without Articles/index-START.html
@@ -47,7 +47,32 @@
 
 <script>
 const bands = ['The Plot in You', 'The Devil Wears Prada', 'Pierce the Veil', 'Norma Jean', 'The Bled', 'Say Anything', 'The Midway State', 'We Came as Romans', 'Counterparts', 'Oh, Sleeper', 'A Skylit Drive', 'Anywhere But Here', 'An Old Dog'];
+const body = document.querySelector('body');
 
+body.innerHTML = '<div><ul class="sorted"></ul></div>';
+
+//for every element, sort without a, an, the 
+
+const isArticle = function (string) {
+  stringPre = string.slice(0,4);
+  const articles = ['the ', 'a ', 'an '];
+  for (var i =0; i< articles.length; i++) {
+    let word = new RegExp (articles[i], 'i');
+    if (stringPre.match(word)) {
+      return string.slice(articles[i].length);
+      }
+  }
+  return string;
+}
+
+bands.sort((a,b) => isArticle(a) > isArticle(b)? 1: -1);
+console.log(bands, 'sorted')
+
+document.querySelector('.sorted').innerHTML = bands.map(band=> {
+  return `
+  <li>${band}</li>
+  `
+}).join('');
 
 </script>
 
